# oil

./: .gitignore
rogii/: BOLD_EXPLORATION_2026-05-07.md  HANDOVER.md  HANDOVER_FOR_CLAUDE.md  PRIVATE_LB_STRATEGY_2026-05-07.md  STRATEGY_RESET_2026-05-07.md  STRATEGY_v8_2026-05-07.md  V9_OOF_RESULTS_2026-05-07.md
rogii/bench/: SUBMIT_GATE.md  _build_features_fast.py  _build_features_parallel.py  _formula_oof_runner.py  _probe_feature_speed.py  _seq_baseline_gbm.py  _v11_full_oof_runner.py  _v12_full_oof_runner.py  _v9_full_oof_runner.py  _well_summaries_cache.json  anchor_shrinkage_results.json  anchor_shrinkage_score.py  aniso_results.json  aniso_score.py  diagnose_v9_outliers.py  formation_analysis.py  formation_score.py  formation_stats.json  full_score.py  lgb_objectives_results.json  lgb_objectives_runner.py  local_score.py  multiseed_pilot.py  multiseed_pilot_5seeds.json  multiseed_pilot_results.json  multiseed_results.json  multiseed_score.py  neural_ancc_results.json  neural_ancc_score.py  pad_sister_score.py  particle_geosteer_score.py  run_max_cpu_search.py  rust_pf_smoke.py  safe-submit  score-rust  sequence_transformer_score.py  stack_score.py  submit_guard.py  summarize_scores.py  triple_signal_pf_smoke.py  (+1 more)
rogii/notebook/: assemble.py  build_ipynb.py  build_ipynb_v10.py  build_ipynb_v11.py  build_ipynb_v12.py  build_ipynb_v4.py  build_ipynb_v5.py  build_ipynb_v6.py  build_ipynb_v8.py  build_ipynb_v9.py  kaggle_cell.py  kaggle_cell_v10.py  kaggle_cell_v11.py  (+14 more)
rogii/rust/rogii_pf/: Cargo.toml  build.sh  pyproject.toml
rogii/rust/rogii_pf/src/: lib.rs
(+27 files in other folders)
