[package]
name = "rogii_pf"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Rogii triple-signal PFs (Z-velocity + ANCC) with PyO3 + Rayon batching."
authors = ["rogii"]

[lib]
name = "rogii_pf"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.10"
rand = "0.8"
rand_pcg = "0.3"
rand_distr = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

# M1 Pro target-cpu is set via RUSTFLAGS in build.sh — Cargo per-target rustflags
# in Cargo.toml are ignored for non-workspace `[target]` sections.
