[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rogii_pf"
version = "0.1.0"
description = "Rust port of triple-signal PFs (Z-velocity + ANCC) — PyO3+Rayon"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
